// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Number basic 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}"
`;

exports[`Integer basic 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}"
`;

exports[`Nullable nullable: true 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value, context) {
    if (value === null) {
        return value;
    }
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}"
`;

exports[`String with enum 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value, context) {
    if (value !== 'a' && value !== 'b' && value !== 'c') {
        return new ValidationError(path, 'Expected one of the enum value');
    }
    return value;
}"
`;

exports[`String with pattern 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
const obj1 = new RegExp('^[a-z]+$');
function obj0(path, value, context) {
    if (typeof value !== 'string') {
        return new ValidationError(path, 'Expected a string');
    }
    if (!obj1.test(value)) {
        return new ValidationError(path, 'Expected to match the pattern "^[a-z]+$"');
    }
    return value;
}"
`;

exports[`Objects with a required prop 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj2(path, value, context) {
    if (typeof value !== 'string') {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value, context) {
    if (typeof value !== 'object' || value === null) {
        return new ValidationError(path, 'Expected an object');
    }
    const keys = new Set(Object.keys(value));
    const value0 = value['foo'];
    if (value0 !== undefined) {
        const result0 = obj1([
            ...path,
            'foo'
        ], value0, context);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['foo'] = result0;
        keys.delete('foo');
    } else {
        return new ValidationError(path, 'Expected "foo" to be defined');
    }
    const value1 = value['bar'];
    if (value1 !== undefined) {
        const result1 = obj2([
            ...path,
            'bar'
        ], value1, context);
        if (result1 instanceof ValidationError) {
            return result1;
        }
        value['bar'] = result1;
        keys.delete('bar');
    }
    if (keys.size > 0) {
        return new ValidationError(path, 'Unexpected properties');
    }
    return value;
}"
`;

exports[`Objects with a default value 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj0(path, value, context) {
    if (typeof value !== 'object' || value === null) {
        return new ValidationError(path, 'Expected an object');
    }
    const keys = new Set(Object.keys(value));
    const value0 = value['foo'];
    if (value0 !== undefined) {
        const result0 = obj1([
            ...path,
            'foo'
        ], value0, context);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['foo'] = result0;
        keys.delete('foo');
    } else {
        value['foo'] = 10;
    }
    if (keys.size > 0) {
        return new ValidationError(path, 'Unexpected properties');
    }
    return value;
}"
`;

exports[`Objects as free form object 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value, context) {
    if (typeof value !== 'object' || value === null) {
        return new ValidationError(path, 'Expected an object');
    }
    const keys = new Set(Object.keys(value));
    return value;
}"
`;

exports[`Objects with additionalProperties: true 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj0(path, value, context) {
    if (typeof value !== 'object' || value === null) {
        return new ValidationError(path, 'Expected an object');
    }
    const keys = new Set(Object.keys(value));
    const value0 = value['foo'];
    if (value0 !== undefined) {
        const result0 = obj1([
            ...path,
            'foo'
        ], value0, context);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['foo'] = result0;
        keys.delete('foo');
    } else {
        value['foo'] = 10;
    }
    return value;
}"
`;

exports[`Objects with additionalProperties: {} 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj2(path, value, context) {
    if (typeof value !== 'string') {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value, context) {
    if (typeof value !== 'object' || value === null) {
        return new ValidationError(path, 'Expected an object');
    }
    const keys = new Set(Object.keys(value));
    const value0 = value['foo'];
    if (value0 !== undefined) {
        const result0 = obj1([
            ...path,
            'foo'
        ], value0, context);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['foo'] = result0;
        keys.delete('foo');
    } else {
        value['foo'] = 10;
    }
    for (const key of keys) {
        const result = obj2([
            ...path,
            key
        ], value[key], context);
        if (result instanceof ValidationError) {
            return result;
        }
        value[key] = result;
    }
    return value;
}"
`;

exports[`Objects with minProperties/maxProperties 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value, context) {
    if (typeof value !== 'object' || value === null) {
        return new ValidationError(path, 'Expected an object');
    }
    const keys = new Set(Object.keys(value));
    if (keys.size < 1) {
        return new ValidationError(path, 'Expected at least 1 properties');
    }
    if (keys.size > 10) {
        return new ValidationError(path, 'Expected at most 10 properties');
    }
    return value;
}"
`;

exports[`Array minItems / maxItems 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value, context) {
    if (typeof value !== 'string') {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value, context) {
    if (!Array.isArray(value)) {
        return new ValidationError(path, 'Expected an array');
    }
    if (value.length < 1) {
        return new ValidationError(path, 'Expected at least 1 items');
    }
    if (value.length > 10) {
        return new ValidationError(path, 'Expected at most 10 items');
    }
    for (let i = 0; i < value.length; i++) {
        const itemResult = obj1([
            ...path,
            i
        ], value[i], context);
        if (itemResult instanceof ValidationError) {
            return itemResult;
        }
        value[i] = itemResult;
    }
    return value;
}"
`;

exports[`Array uniqueItems 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value, context) {
    if (typeof value !== 'string') {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value, context) {
    if (!Array.isArray(value)) {
        return new ValidationError(path, 'Expected an array');
    }
    const valueSet = new Set();
    for (let i = 0; i < value.length; i++) {
        const itemResult = obj1([
            ...path,
            i
        ], value[i], context);
        if (valueSet.has(itemResult)) {
            return new ValidationError(path, 'Expected unique items');
        }
        valueSet.add(itemResult);
        if (itemResult instanceof ValidationError) {
            return itemResult;
        }
        value[i] = itemResult;
    }
    return value;
}"
`;

exports[`anyOf 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj2(path, value, context) {
    if (typeof value !== 'string') {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value, context) {
    const value0 = obj1(path, value, context);
    if (!(value0 instanceof ValidationError)) {
        return value0;
    }
    const value1 = obj2(path, value, context);
    if (!(value1 instanceof ValidationError)) {
        return value1;
    }
    return new ValidationError(path, 'Expected one of the anyOf schemas to match');
}"
`;

exports[`oneOf 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj2(path, value, context) {
    if (typeof value !== 'string') {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value, context) {
    let result;
    const alt0 = obj1(path, value, context);
    if (!(alt0 instanceof ValidationError)) {
        result = alt0;
    }
    const alt1 = obj2(path, value, context);
    if (!(alt1 instanceof ValidationError)) {
        result = alt1;
        if (result !== undefined) {
            return new ValidationError(path, 'Expected to only match one of the schemas');
        }
    }
    return result;
}"
`;

exports[`allOf 1`] = `
"export function validateRequest(request, context) {
    return new ValidationError([], 'no operation match path');
}
class ValidationError extends Error {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj2(path, value, context) {
    if (typeof value !== 'number') {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj1(path, value, context) {
    if (typeof value !== 'object' || value === null) {
        return new ValidationError(path, 'Expected an object');
    }
    const keys = new Set(Object.keys(value));
    const value0 = value['a'];
    if (value0 !== undefined) {
        const result0 = obj2([
            ...path,
            'a'
        ], value0, context);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['a'] = result0;
        keys.delete('a');
    }
    if (keys.size > 0) {
        return new ValidationError(path, 'Unexpected properties');
    }
    return value;
}
function obj4(path, value, context) {
    if (typeof value !== 'string') {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj3(path, value, context) {
    if (typeof value !== 'object' || value === null) {
        return new ValidationError(path, 'Expected an object');
    }
    const keys = new Set(Object.keys(value));
    const value0 = value['b'];
    if (value0 !== undefined) {
        const result0 = obj4([
            ...path,
            'b'
        ], value0, context);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['b'] = result0;
        keys.delete('b');
    }
    if (keys.size > 0) {
        return new ValidationError(path, 'Unexpected properties');
    }
    return value;
}
function obj0(path, value, context) {
    let result = value;
    result = obj1(path, result, context);
    if (result instanceof ValidationError) {
        return result;
    }
    result = obj3(path, result, context);
    if (result instanceof ValidationError) {
        return result;
    }
    return result;
}"
`;
